2006-11-24  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml:
	* doc/oprofile.1.in: warn about braces parsing in differential
	  mode.

	* doc/opreport.1.in:
	* doc/oparchive.1.in:
	* doc/opannotate.1.in:
	* doc/opgprof.1.in: point explicitly to oprofile(1)

	* pp/opreport_options.cpp: --xml is incompatible with
	  differential profiles.

2006-11-22  Philippe Elie  <phil.el@wanadoo.fr>

	* libop/op_alloc_counter.c: reapply 2006-8-03  Jeremiah Lott patch
	  which was accidentally reverted, as a sideeffect this patch change
	  counter allocation order. It can't hurt since our storage don't
	  take care about counter number.
	* libop/tests/alloc_counter_tests.c: add a test case for this patch.
	  Take care about counter allocation order change.

2006-11-19  Maynard Johnson <maynardj@us.ibm.com>

	* doc/oprofile.xml:  Document platforms where callgraph is supported

2006-11-17  Dave Nomura  <dcnltc@us.ibm.com>

	* doc/Makefile.am:
	* doc/opreport.1.in:
	* doc/opreport.xsd:
	* doc/oprofile.xml:
	* libop/op_alloc_counter.c:
	* libpp/Makefile.am:
	* libpp/arrange_profiles.cpp:
	* libpp/format_output.cpp:
	* libpp/format_output.h:
	* libpp/op_header.cpp:
	* libpp/profile_container.cpp:
	* libpp/symbol.cpp:
	* libpp/symbol.h:
	* libpp/xml_utils.cpp:
	* libpp/xml_utils.h:
	* libutil++/Makefile.am:
	* libutil++/bfd_support.cpp:
	* libutil++/cverb.cpp:
	* libutil++/cverb.h:
	* libutil++/op_bfd.cpp:
	* libutil++/op_bfd.h:
	* libutil++/xml_output.cpp:
	* libutil++/xml_output.h:
	* pp/common_option.cpp:
	* pp/common_option.h:
	* pp/oparchive_options.cpp:
	* pp/opgprof_options.cpp:
	* pp/opreport.cpp:
	* pp/opreport_options.cpp:
	* pp/opreport_options.h: XML output support.

2006-8-03  Jeremiah Lott  <jeremiah.lott@timesys.com>

	* libop/op_alloc_counter.c: allocate_counter(...) was returning
	  prior to considering all possible allocation strategies.

2006-11-15  Adam Bordelon  <me@cs.rice.edu>

	* doc/internals.xml:
	* doc/opannotate.1.in:
	* doc/oparchive.1.in: