@@ -1,3 +1,8 @@
+2006-12-06  Daniel Jacobowitz  <dan@debian.org>
+
+	* libopt++/popt_options.cpp: complete fix for static
+	  initialisation ordering bug on ARM
+
 2006-11-24  John Levon  <levon@movementarian.org>
 
 	* doc/oprofile.xml:
